добавил функцию подписки и отписки через телеграм

--- a/services/notification/src/main/resources/application.properties
+++ b/services/notification/src/main/resources/application.properties
@@ -21,5 +21,6 @@ logging.file.name=logs/notification.log
 tg.username=@myCheckDevBot
 tg.token=7011200089:AAFHyiZQskYkTVunMJF8NifiwqGsIurM74w
 server.auth=http://localhost:9900
+server.desk=http://localhost:9902
 server.site.url.login=http://localhost:8080/login
 spring.liquibase.change-log=classpath:db/db.changelog-master.xml
