4. Spring boot + Kafka [#505039]

--- a/services/site/src/main/resources/application.properties
+++ b/services/site/src/main/resources/application.properties
@@ -26,3 +26,12 @@ server.site.contentTypeFile=image/jpeg
 #Данные для работы с сервисом MOCK
 service.mock = http://localhost:9912
 
+#Конфигурация для Kafka:
+spring.kafka.bootstrap-servers = localhost:9092
+spring.kafka.producer.key-serializer = org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer = org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.producer.properties.spring.json.type.mapping=ru.job4j.site.dto.SubscribeCategory, ru.job4j.site.dto.SubscribeTopic
+kafka.add-subscribeCategory-topic.name = add-subscribeCategoryTopic
+kafka.delete-subscribeCategory-topic.name = delete-subscribeCategoryTopic
+kafka.add-subscribeTopic-topic.name = add-subscribeTopicTopic
+kafka.delete-subscribeTopic-topic.name = delete-subscribeTopicTopic
