--- a/services/notification/src/main/resources/application.properties
+++ b/services/notification/src/main/resources/application.properties
@@ -24,3 +24,11 @@ server.auth=http://localhost:9900
 server.desk=http://localhost:9902
 server.site.url.login=http://localhost:8080/login
 spring.liquibase.change-log=classpath:db/db.changelog-master.xml
+
+#Конфигурация для Kafka:
+spring.kafka.consumer.bootstrap-servers: localhost:9092
+spring.kafka.consumer.group-id: group-id
+spring.kafka.consumer.auto-offset-reset: earliest
+spring.kafka.consumer.key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.producer.properties.spring.json.type.mapping: ru.checkdev.notification.domain.SubscribeCategory, subscribeTopic:ru.checkdev.notification.domain.SubscribeTopic
