--- a/services/desc/Dockerfile
+++ b/services/desc/Dockerfile
@@ -1,13 +1,11 @@
-FROM maven:3.6.3-openjdk-17
+# сборка проекта в jar
+FROM maven:3.6.3-openjdk-17 as maven
+WORKDIR /desk
+COPY . /desk
+RUN mvn install
 
-RUN mkdir auth
-
-WORKDIR auth
-
-COPY . .
-
-RUN mvn package -Dmaven.test.skip=true
-
-CMD ["mvn", "liquibase:update", "-Pdocker"]
-
-CMD ["java", "-jar", "target/desc-1.0.0.jar"]
+# указание, как запустить проект
+FROM openjdk:17.0.2-jdk
+WORKDIR /desk
+COPY --from=maven /desk/target/desc-1.0.0.jar desc.jar
+CMD java -jar desk.jar
